# python-project-template

./: .flake8  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python_workflow.yml
tests/: test_thing.py
