[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/connor-mccarthy/<repo-name>"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
bandit = "^1.7.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pytest]
minversion = "6.2"
addopts = "--cov=./src --cov-report=term-missing"